src/test/ui/lifetimes/lifetime-errors/liveness-assign-imm-local-notes.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/liveness-assign-imm-local-notes.rs:10:9
   |
LL |     let x;
   |         - help: make this binding mutable: `mut x`
...
LL |         x = 2;
   |         ----- first assignment to `x`
LL |         x = 3;
   |         ^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/liveness-assign-imm-local-notes.rs:21:13
   |
LL |         let x;
   |             - help: make this binding mutable: `mut x`
...
LL |             x = 2;
   |             ----- first assignment to `x`
LL |             x = 3;
   |             ^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/liveness-assign-imm-local-notes.rs:30:13
   |
LL |     let x;
   |         - help: make this binding mutable: `mut x`
...
LL |             x = 1;
   |             ^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/liveness-assign-imm-local-notes.rs:32:13
   |
LL |     let x;
   |         - help: make this binding mutable: `mut x`
...
LL |             x = 1;
   |             ----- first assignment to `x`
LL |         } else {
LL |             x = 2;
   |             ^^^^^ cannot assign twice to immutable variable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0384`.
